# mech-class

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LABEL_PROVENANCE.md  MANIFEST.in  MODEL_CARD.md  README.md  UPDATE_STRATEGY.md  VALIDATION.md  holdout_set.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docs.yml
containers/structure/: Dockerfile
data/: review_queue_annotated.tsv  review_queue_annotated_final.tsv  review_queue_summary.json
docs/: changelog.rst  conf.py  index.rst  quickstart.rst
docs/api/: features.rst  models.rst  predictor.rst
mech_class/: __init__.py  _version.py  api.py  cli.py
mech_class/data/: __init__.py  active_site_residues.yaml  label_taxonomy.yaml  loader.py
mech_class/evidence/: __init__.py  aggregator.py  atlas_domain.py  crisprcasdb.py  foundational.py  interpro.py  mcsa.py  pfam_whitelist.py  rhea.py  tnpedia.py  uniprot_features.py
mech_class/features/: __init__.py  active_site.py  domain.py  seq.py  struct.py
mech_class/models/: __init__.py  composite_head.py  lightgbm_clf.py  mlp_clf.py
mech_class/utils/: __init__.py  plddt.py
results/: fanzor_candidates_summary.json  holdout_results_corrected.json  is110_triage_summary.json
scripts/: 00_smoke_import.py  01_pull_mcsa.py  02_pull_rhea.py  03_pull_uniprot_features.py  04_pull_interpro.py  05_pull_tnpedia.py  05b_pull_crisprcasdb.py  05c_pull_pfam_whitelist.py  05d_pull_foundational.py  05e_pull_atlas_domains.py  06_aggregate_evidence.py  07_review_queue.py  08_ingest_curator_decisions.py  10_compute_esm2_embeddings.py  11_compute_saprot_embeddings.py  12_compute_active_site_features.py  13_compute_domain_features.py  14_assemble_feature_matrix.py  20_train_tier_a.py  21_train_tier_b.py  22_train_composite_head.py  23_channel_ablation.py  24_bootstrap_cis.py  25_train_mlp_baseline.py  26_holdout_validation.py  27_spcas9_composite_check.py  28_bxb1_saprot.py  29_holdout_corrected.py  30_holdout_validation.py  40_assemble_fanzor_candidates.py  40_predict_fanzor_catalog.py  40_predict_fanzor_catalog_orig.py  41_predict_fanzor_catalog.py  41_predict_ruvc_fold_catalog.py  41_stage1_pfam_filter.py  42_assemble_is110_candidates.py  43_predict_ruvc_fold_catalog.py  50_predictor_smoke_test.py  run_evidence.sh  run_part_b_evidence.sh
scripts/figures/: fig1_taxonomy.py  fig2_confusion_matrix.py  fig3_channel_ablation.py  fig4_is110_composite.py  fig5_holdout_probes.py  fig6_fanzor_catalog.py
tests/: conftest.py
tests/integration/: test_evidence_pipeline.py  test_predictor_api.py
tests/regression/: test_holdout_probes.py  test_tier_a_macro_f1_drift.py
tests/unit/: test_aggregator.py  test_api_helpers.py  test_api_mocked.py  test_composite_head.py  test_domain_coverage.py  test_domain_features.py  test_lightgbm_clf.py  test_seq_coverage.py  test_seq_features.py
