[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mech-class"
description = "Mechanism classification for programmable genome-writing enzymes"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Anees Ahmed", email = "ahmedaneesm@gmail.com"}]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Core classifier + data
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    # Prediction API
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    # FASTA parsing (optional at runtime but common enough to include)
    "biopython>=1.83",
]

[project.optional-dependencies]
# Sequence embedding (ESM-2 150M)  — required for F_seq channel
seq = ["fair-esm>=2.0", "torch>=2.2.1"]
# Structure embedding (SaProt 650M) — requires GPU, not packaged
struct = ["foldseek-python>=2.0", "transformers>=4.39.0", "torch>=2.2.1"]
# Atlas DuckDB access (for domain feature matrix building)
atlas = ["duckdb>=0.10.0", "genome-atlas>=0.6.0"]
# Development toolchain
dev = ["pytest>=8.1", "pytest-cov>=5.0", "ruff>=0.3", "mypy>=1.9", "pre-commit>=3.7"]
# Documentation
docs = ["sphinx>=7.3", "sphinx-autodoc-typehints", "furo", "myst-nb"]
# Full install (training + inference + dev)
all = ["mech-class[seq,struct,atlas,dev]"]

[project.scripts]
mech-class = "mech_class.cli:main"

[project.urls]
Homepage = "https://github.com/ahmedanees-m/mech-class"
Documentation = "https://mech-class.readthedocs.io"
Repository = "https://github.com/ahmedanees-m/mech-class"
Changelog = "https://github.com/ahmedanees-m/mech-class/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["mech_class*"]

[tool.setuptools_scm]
write_to = "mech_class/_version.py"
fallback_version = "0.5.0"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=mech_class --cov-report=term-missing --cov-report=xml --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mech_class"]
omit = [
    # Evidence scrapers — require live external APIs or licensed databases
    "mech_class/evidence/mcsa.py",
    "mech_class/evidence/rhea.py",
    "mech_class/evidence/interpro.py",
    "mech_class/evidence/tnpedia.py",
    "mech_class/evidence/crisprcasdb.py",
    "mech_class/evidence/uniprot_features.py",
    "mech_class/evidence/pfam_whitelist.py",
    "mech_class/evidence/atlas_domain.py",
    "mech_class/evidence/foundational.py",
    # CLI (tested manually; hard to unit test click apps without click.testing)
    "mech_class/cli.py",
    # Data loader (requires /data/ volume; tested implicitly via regression tests on VM)
    "mech_class/data/loader.py",
    # Structure and active-site channels (require SaProt/PDB; always zero-filled at CI)
    "mech_class/features/struct.py",
    "mech_class/features/active_site.py",
    # MLP classifier (supplementary; not used in published model)
    "mech_class/models/mlp_clf.py",
    # pLDDT utility (requires structural data)
    "mech_class/utils/plddt.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
