[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mech-class"
description = "Mechanism classification for programmable genome-writing enzymes"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Anees Ahmed", email = "ahmedaneesm@gmail.com"}]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Core classifier + data
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    # Prediction API
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    # FASTA parsing (optional at runtime but common enough to include)
    "biopython>=1.83",
]

[project.optional-dependencies]
# Sequence embedding (ESM-2 150M)  — required for F_seq channel
seq = ["fair-esm>=2.0", "torch>=2.2.1"]
# Structure embedding (SaProt 650M) — requires GPU, not packaged
struct = ["foldseek-python>=2.0", "transformers>=4.39.0", "torch>=2.2.1"]
# Atlas DuckDB access (for domain feature matrix building)
# genome-atlas pinned to >=0.7.2,<0.8.0:
#   v0.7.2 adds canonical ISCro4 naming (was IS622 preprint label), load_systems() API,
#          alias-resolution with DeprecationWarning; required by PEN-COMPARE v3.2.
#   v0.7.1 restores SIMILAR_TO/HAS_RNA/PART_OF edges via graph_view='full' secondary view
#          (fixes atlas_domain feature extractor), adds ISCro4 (D2TGM5), AUROC 0.9714.
#   v0.7.0 is skipped — it broke SIMILAR_TO and adds no new mech-class training data.
atlas = ["duckdb>=0.10.0", "genome-atlas>=0.7.2,<0.8.0"]
# Development toolchain
dev = ["pytest>=8.1", "pytest-cov>=5.0", "ruff>=0.3", "mypy>=1.9", "pre-commit>=3.7"]
# Documentation
docs = ["sphinx>=7.3", "furo", "myst-parser"]
# Full install (training + inference + dev)
all = ["mech-class[seq,struct,atlas,dev]"]

[project.scripts]
mech-class = "mech_class.cli:main"

[project.urls]
Homepage = "https://github.com/ahmedanees-m/mech-class"
Documentation = "https://mech-class.readthedocs.io"
Repository = "https://github.com/ahmedanees-m/mech-class"
Changelog = "https://github.com/ahmedanees-m/mech-class/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["mech_class*"]

[tool.setuptools_scm]
write_to = "mech_class/_version.py"
fallback_version = "0.5.4"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "D100", "D104", "D203", "D213",
    # ML/numpy convention: uppercase X, X_df, X_comp etc. are standard matrix names
    "N806",
    # ML/sklearn convention: X is the standard feature-matrix argument name
    "N803",
    # CamelCase imported as private alias (_MLP, _LGB, etc.)
    "N814",
    # warnings.warn stacklevel — many callers are internal utilities
    "B028",
    # zip() strict= not needed for internal paired arrays
    "B905",
    # SIM105 contextlib.suppress — explicit try/except is clearer here
    "SIM105",
    # SIM108 ternary: readability preference kept as-is
    "SIM108",
    # B904 raise-from inside except: pre-existing style
    "B904",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
# pydantic.mypy plugin requires pydantic installed; omit to keep CI lint step
# dependency-free (lint step only installs ruff mypy types-PyYAML types-requests)

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=mech_class --cov-report=term-missing --cov-report=xml --cov-fail-under=60 --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mech_class"]
omit = [
    # evidence scrapers — network I/O, not unit-testable without mocks
    "mech_class/evidence/mcsa.py",
    "mech_class/evidence/rhea.py",
    "mech_class/evidence/interpro.py",
    "mech_class/evidence/tnpedia.py",
    "mech_class/evidence/crisprcasdb.py",
    "mech_class/evidence/uniprot_features.py",
    "mech_class/evidence/pfam_whitelist.py",
    "mech_class/evidence/atlas_domain.py",
    "mech_class/evidence/foundational.py",
    # CLI entry point
    "mech_class/cli.py",
    # data loader (thin wrapper)
    "mech_class/data/loader.py",
    # structural channels — require GPU/Foldseek
    "mech_class/features/struct.py",
    "mech_class/features/active_site.py",
    # MLP baseline — excluded from main paper
    "mech_class/models/mlp_clf.py",
    # pLDDT helper
    "mech_class/utils/plddt.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
